# solana-realtime-indexer

./: .env.example  .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
fixtures/: pumpfun-buy-via-flashx-01-parsed.json  pumpfun-buy-via-flashx-01.json  pumpfun-failed-01.json  pumpfun-signatures.json
migrations/: 20260721170252_initial_schema.sql
notes/: architecture.excalidraw  pumpfun-transaction-walkthrough.md
src/: main.rs
