[package]
name = "solana-realtime-indexer"
version = "0.1.0"
edition = "2024"
default-run = "solana-realtime-indexer"

[dependencies]
carbon-core = "1.0.0"
carbon-pumpfun-decoder = "1.0.0"
carbon-pump-swap-decoder = "1.0.0"
carbon-yellowstone-grpc-datasource = "1.0.0"
serde_json = "1.0.150"
bs58 = "0.5.1"
base64 = "0.22"
solana-instruction = "3.4.0"
solana-pubkey = "3.0.0"
yellowstone-grpc-proto = "10.1.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
env_logger = "0.11"
solana-rpc-client = "3.1.5"
clap = { version = "4", features = ["derive"]}
chrono = "0.4"
yellowstone-grpc-client = "10.1.1"
futures = "0.3"